# RLchess

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py
rlchess/: cli.py
rlchess/board/: board.py  board_config.py  color_palette.py  slot.py  visual_board.py
rlchess/board/pieces/: abstract_piece.py  bishop.py  king.py  knight.py  pawn.py  pieces.py  queen.py  rook.py
rlchess/utils/: slot_utils.py
test/test_utils/: test_board_utils.py
